--- a/tests/nixos_test/config/hosts/testhost.toml.j2
+++ b/tests/nixos_test/config/hosts/testhost.toml.j2
@@ -1,9 +1,9 @@
 validity_in_days = 365
 hostnames = [
-    "testhost"
+    "testhost",
     "testhost.test"
 ]
-public_key = "{{public_key}}"
+public_key = "{{ public_key }}"
 extensions = []
 
 [critical_options]
